--- a/main.tex
+++ b/main.tex
@@ -36,11 +36,14 @@
 %\usepackage{dsfont}   
 
 %%%%%%%%%%%%%%%%%%%TikZ%%%%%%%%%%%%%%%%%%%%%%
-%\usepackage{tikz}
+\usepackage{tikz}
 %\usepackage{circuitikz}
-%\usetikzlibrary{calc}
-%\usetikzlibrary{arrows}
-%\usetikzlibrary{positioning}
+\usetikzlibrary{calc}
+\usetikzlibrary{arrows}
+\usetikzlibrary{shapes}
+\usetikzlibrary{positioning}
+
+\tikzstyle{every picture}+=[remember picture]
 
 %%%%%%%%%%%%%%中文 Environment%%%%%%%%%%%%%%%
 \usepackage[CheckSingle, CJKmath]{xeCJK}  % xelatex 中文
