--- a/group/week6.tex
+++ b/group/week6.tex
@@ -123,7 +123,7 @@ x_{r+1}, \dots, x_n \not\in \Fix G$. Then
   Since $(1, \dots, 1) \in \Fix \quot{\Zb}{p\Zb}, \abs*{\quot{\Zb}{p\Zb}} \ne 0
   \implies \abs*{\quot{\Zb}{p\Zb}} \ge p$.
 
-  So $\exists (a, \dots, a) \in \Fix \quot{\Zb}{p\Zb} \implies a^p = 1$w
+  So $\exists (a, \dots, a) \in \Fix \quot{\Zb}{p\Zb} \implies a^p = 1$.
 \end{theorem}
 
 \underline{Application}: Let $\abs{G} = p^3$ and $G$ be non-abelian
