--- a/group/week4.tex
+++ b/group/week4.tex
@@ -198,11 +198,11 @@ Inverse limit:
         f(ab) &= f(a)f(b)
       \end{cases}$.
     \item $\Image f$ is a subring of $R_2$.
-    \item $\Ker f = \{\, x \in R_1 \mid f(x) = 0 \,\}$ is an additive group of
-      $R_1$ and $\forall r \in R_1, x \in \Ker f, f(rx) = f(r)f(x) = f(r)0 = 0
-      \implies rx \in \Ker f, xr \in \Ker f$.
-    \item $\quot{R_1}{\Ker f}$ is an additive group and
-      $\quot{R_1}{\Ker f} \cong \Image f$ (additive isomorphism).
+    \item $\ker f = \{\, x \in R_1 \mid f(x) = 0 \,\}$ is an additive group of
+      $R_1$ and $\forall r \in R_1, x \in \ker f, f(rx) = f(r)f(x) = f(r)0 = 0
+      \implies rx \in \ker f, xr \in \ker f$.
+    \item $\quot{R_1}{\ker f}$ is an additive group and
+      $\quot{R_1}{\ker f} \cong \Image f$ (additive isomorphism).
   \end{itemize}
 \end{definition}
 
@@ -232,7 +232,7 @@ Inverse limit:
 \end{prop}
 
 \begin{definition}
-  In Prop \ref{prop:phi1e1}, $\Ker \varphi = m\Zb$ for some $m > 0$.
+  In Prop \ref{prop:phi1e1}, $\ker \varphi = m\Zb$ for some $m > 0$.
   We call $m$ the characteristic of $R$, denoted by $\Char R = m$.
 \end{definition}
 
