--- a/group/week4.tex
+++ b/group/week4.tex
@@ -287,8 +287,8 @@ Inverse limit:
 
     Otherwise, $h < n$. We know that $x^h - 1$ has at most $h$ roots.
     So $\exists b \in G$ is not a root of $x^h - 1$.
-    Let $\ord(b) = h'$, so $h' \mid n$ and $h' \not\mid h$.
-    So $\exists$ a prime $p$ s.t. $p^r \mid h'$ but $p^r \not\mid h$.
+    Let $\ord(b) = h'$, so $h' \mid n$ and $h' \nmid h$.
+    So $\exists$ a prime $p$ s.t. $p^r \mid h'$ but $p^r \nmid h$.
 
     Write $h = mp^s, s < r$ and $\gcd(m, p) = 1 \implies
     \ord \left( a^{p^s} \right) = m$.
