--- a/main.tex
+++ b/main.tex
@@ -214,6 +214,7 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{remark}{Remark}
 \newtheorem{observation}{Observation}
+\newtheorem*{observation*}{Observation}
 \newtheorem{definition}{Def}
 \newtheorem{exercise}{Ex}[subsection]
 \newtheorem{example}{Eg}[subsection]
@@ -238,6 +239,7 @@
 \include{group/week4}
 \include{group/week5}
 \include{group/week6}
+\include{group/week7}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
