--- a/group/week5.tex
+++ b/group/week5.tex
@@ -192,5 +192,5 @@
       \implies \quot{G}{Z_G(H)} \le \Aut(H)
     \]
   \item The normalizer of $H$ in $G$:
-    $N_G(H) = \{\, g\in G \mid gHg^{-1} \le H \,\}$
+    $N_G(H) = \{\, g\in G \mid gHg^{-1} = H \,\}$
 \end{itemize}
