--- a/main.tex
+++ b/main.tex
@@ -156,6 +156,7 @@
 \newcommand{\Cbx}{\mathbb{C}^\times}
 \newcommand{\Hbx}{\mathbb{H}^\times}
 
+\DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\Image}{Im}
