--- a/group/week7.tex
+++ b/group/week7.tex
@@ -250,7 +250,7 @@ The classification of all finite simple groups is given as follows:
 \end{example}
 
 \begin{definition}
-  A ubmodule $N$ of $M$ is an additive subgroup of $M$ s.t.
+  A submodule $N$ of $M$ is an additive subgroup of $M$ s.t.
   $\forall r \in R, a \in N, \quad ra \in N$.
 \end{definition}
 
@@ -339,7 +339,7 @@ Recall that the elementary matrices are
     $D_i(u) \in \text{GL}(n, R)$ if $u$ is a unit.
   \item $B_{ij}(a) = I_n + ae_{ij}, a\in R, i \ne j$.
     $B_{ij}(a)^{-1} = B_{ij}(-a) \implies B_{ij}(a) \in \text{GL}(n, R)$.
-  \item $P_{ij} = I_n - e_{ii} - e{jj} + e_{ij} + e_{ji}$.
+  \item $P_{ij} = I_n - e_{ii} - e_{jj} + e_{ij} + e_{ji}$.
 \end{itemize}
 
 \begin{fact}
@@ -393,7 +393,6 @@ Recall that the elementary matrices are
           l(d) < l(a) \\
           d = ax + by \text{~for some~} x, y \in R
         \end{cases} \implies 1 = \frac{a}{d}x + \frac{b}{d}y$.
-        &
         Write $b' = \frac{b}{d}, a' = -\frac{a}{d}$.
         Then
         \[
