--- a/group/week7.tex
+++ b/group/week7.tex
@@ -215,7 +215,7 @@ The classification of all finite simple groups is given as follows:
 
 \begin{definition}
   Let $R$ be a ring with $1$. A $R$-moduule is an abelian group $M$
-  (wriiten additively) on which $R$ acts linearly.
+  (written additively) on which $R$ acts linearly.
   $R \times M \to M \quad (r, x) \mapsto rx$
   \begin{enumerate}
     \item $r(x + y) = rx + ry \quad r \in R, x, y \in M$
@@ -282,7 +282,7 @@ The classification of all finite simple groups is given as follows:
 
 \begin{definition}
   An integral domain $R$ is called a principal ideal domain (PID)
-  if $\forall I$ ieal in $R$, $\exists a \in R$ s.t. $I = \gen{a}_R$.
+  if $\forall I$ ideal in $R$, $\exists a \in R$ s.t. $I = \gen{a}_R$.
 \end{definition}
 
 \begin{example}
