--- a/main.tex
+++ b/main.tex
@@ -165,6 +165,8 @@
 \DeclareMathOperator{\Inn}{Inn}
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\Isom}{Isom}
+\DeclareMathOperator{\Tor}{Tor}
+\DeclareMathOperator{\Exp}{Exp}
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -241,6 +243,7 @@
 \include{group/week5}
 \include{group/week6}
 \include{group/week7}
+\include{group/week8}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
