--- a/group/week8.tex
+++ b/group/week8.tex
@@ -194,4 +194,7 @@
   Show that $\exists f(x) \in \Zb[x]$ with $\deg f = d$ s.t.
   $\ob{f}(x) = \ob{f_i}(x)$ in 
   $\quot{\Zb}{p_i\Zb}[x] \quad \forall i = 1, \dots k$.
+
+  $f(x) = a_d x^d + \dots + a_0,
+  \ob{f}(x) = \ob{a_d} x^d + \dots + \ob{a_0}$
 \end{exercise}
