--- a/group/week8.tex
+++ b/group/week8.tex
@@ -42,6 +42,9 @@
       \quad \text{with} \quad
       d_i \Div d_{i+1} \quad \forall i = 1, \dots, r-1
     \]
+    So consider $[w_i] = Q e_i$. Since $P, Q$ invertible, $R^n = \bigoplus R w_i, \ker \phi = \bigoplus d_i R w_i$
+    Hence
+    \[ M \simeq R / ker \phi = \bigoplus R w_i / \bigoplus d_i R w_i = \bigoplus R / d_i R \]
   \end{proof}
 
   $\arraycolsep=3pt
