--- a/main.tex
+++ b/main.tex
@@ -196,6 +196,7 @@
 \ExplSyntaxOff
 
 \newcommand\Div{\,\big|\,}
+\newcommand\nDiv{\,\big\not|\,}
 \newcommand\relmiddle[1]{\mathrel{}\middle#1\mathrel{}}
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
