--- a/group/week8.tex
+++ b/group/week8.tex
@@ -42,9 +42,9 @@
       \quad \text{with} \quad
       d_i \Div d_{i+1} \quad \forall i = 1, \dots, r-1
     \]
-    So consider $[w_i] = Q e_i$. Since $P, Q$ invertible, $R^n = \bigoplus R w_i, \ker \phi = \bigoplus d_i R w_i$
+    So consider $[w_i] = Q e_i$. Since $P, Q$ invertible, $R^n = \bigoplus R w_i, \ker \varphi = \bigoplus d_i R w_i$
     Hence
-    \[ M \simeq R / ker \phi = \bigoplus R w_i / \bigoplus d_i R w_i = \bigoplus R / d_i R \]
+    \[ M \simeq R / ker \varphi = \bigoplus R w_i / \bigoplus d_i R w_i = \bigoplus R / d_i R \]
   \end{proof}
 
   $\arraycolsep=3pt
@@ -179,7 +179,7 @@
 
 \begin{exercise} \mbox{}
   \begin{enumerate}
-    \item Let $G$ be abelian with $\abs{G} = n$. Show that if $d \div n$, then
+    \item Let $G$ be abelian with $\abs{G} = n$. Show that if $d \Div n$, then
       $\exists H \le G$ s.t. $\abs{H} = d$.
     \item If $n=540, d=90$, then construct all possible $G$ and
       corresponding $H$.
@@ -202,7 +202,7 @@
   \ob{f}(x) = \ob{a_d} x^d + \dots + \ob{a_0}$
 \end{exercise}
 
-\subsection{Sylow theorems}
+\subsubsection{Sylow theorems}
 
 \begin{definition}
   Let $\abs{G} = p^\alpha r$ with $p \nmid r$.
